Enhance torus persistence workflow and add playground dataset

--- a/configs/alanine_dipeptide_topo.yaml
+++ b/configs/alanine_dipeptide_topo.yaml
@@ -36,6 +36,8 @@ topology:
   backend: auto
   center: False
   geometry: dihedral
+  torus_metric: sincos
+  torus_harmonics: 2
 
 logging:
   backend: tensorboard
